--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="container">
       <div id="profile">
         <img src="assets/avatar.png" alt="foto de perfil light mode" />
-        <p>@maykbrito</p>
+        <p>João Gabriel</p>
       </div>
 
       <div id="switch" onclick="toggleMode()">
@@ -27,32 +27,25 @@
 
       <ul>
         <li>
-          <a href="#">Inscrever-se no NLW</a>
+          <a href="https://www.typeroyale.com/" target="_blank">Type Royale</a>
         </li>
         <li>
-          <a href="#">Baixar meu e-book</a>
+          <a href="venturous.agency" target="_blank">Venturous agency</a>
         </li>
         <li>
-          <a href="#">Ver meu portfólio</a>
+          <a href="https://github.com/JoaoG14" target="_blank">Ver outros projetos</a>
         </li>
-        <li>
-          <a href="https://rocketseat.com.br/explorer" target="_blank"
-            >Conheça o Explorer</a
-          >
-        </li>
+        
       </ul>
 
       <div id="social-links">
-        <a href="https:/github.com/maykbrito" target="_blank"
+        <a href="https://github.com/JoaoG14" target="_blank"
           ><ion-icon name="logo-github"></ion-icon>
         </a>
-        <a href="https:/github.com/maykbrito" target="_blank"
+        <a href="https://www.instagram.com/joaog.alves_/" target="_blank"
           ><ion-icon name="logo-instagram"></ion-icon>
         </a>
-        <a href="https:/github.com/maykbrito" target="_blank"
-          ><ion-icon name="logo-youtube"></ion-icon>
-        </a>
-        <a href="https:/github.com/maykbrito" target="_blank"
+        <a href="https://www.linkedin.com/in/jo%C3%A3o-gabriel-alves-aa17831b0/" target="_blank"
           ><ion-icon name="logo-linkedin"></ion-icon>
         </a>
       </div>
