--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </a>
       </div>
 
-      <footer>Feito por ser <a href="google.com"> feito</a></footer>
+      <footer>Última alteração em 29/01/2024</a></footer>
     </div>
 
     <script
