Added new project

--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
           <a href="https://www.typeroyale.com/" target="_blank">Type Royale</a>
         </li>
         <li>
-          <a href="venturous.agency" target="_blank">Venturous agency</a>
+          <a href="https://venturous.agency/" target="_blank">Venturous agency</a>
+        </li>
+        <li>
+          <a href="https://meditation.joaogabrielalves.com/" target="_blank">App Meditação</a>
         </li>
         <li>
           <a href="https://github.com/JoaoG14" target="_blank">Ver outros projetos</a>
