Added new buttons

--- a/apps/meditation/index.html
+++ b/apps/meditation/index.html
@@ -23,6 +23,12 @@
         </div>
 
       <div class="btn">
+        <button id="btn-sound-on" class="show">
+          <i class="fa-solid fa-volume-high"></i>
+        </button>
+        <button id="btn-sound-off" class="hide">
+          <i class="fa-solid fa-volume-xmark"></i>
+        </button> 
         <button id="btn-start" class="show">
           <i class="fa-solid fa-play"></i>
         </button>
@@ -32,7 +38,11 @@
         <button id="btn-reset">
           <i class="fa-solid fa-rotate-right"></i>
         </button>
+        <button id="" class="show">
+          <i class="fa-solid fa-gear"></i>
+        </button>
       </div>
+
     </div>
 
     <audio src="assets/bells-1-72261.mp3" id="bell"></audio> 
