Added text instructions

--- a/apps/meditation/index.html
+++ b/apps/meditation/index.html
@@ -13,6 +13,8 @@
   </head>
   <body>
     <div class="container">
+        <p id="focus">Focus on the breath</p>
+
         <div id="timer" class="timer">10:00</div>
 
         <div id="sliderContainer">
