--- a/apps/meditation/index.html
+++ b/apps/meditation/index.html
@@ -47,6 +47,7 @@
 
     </div>
 
+    <audio src="assets/bells-1-72261.mp3" id="bell"></audio>
     <audio src="assets/bells-1-72261.mp3" id="bell"></audio> 
     
 
