--- a/apps/meditation/index.html
+++ b/apps/meditation/index.html
@@ -48,7 +48,8 @@
     </div>
 
     <audio src="assets/bells-1-72261.mp3" id="bell"></audio>
-    <audio src="assets/bells-1-72261.mp3" id="bell"></audio> 
+    <audio loop src="assets/ambient-sounds/forest-with-small-river-birds-and-nature-field-recording-6735.mp3" 
+    id="ambient-sound"></audio> 
     
 
     
