--- a/apps/meditation/index.html
+++ b/apps/meditation/index.html
@@ -11,7 +11,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
   </head>
-  <body>
+  <body class="">
     <div class="container">
         <p id="focus">Focus on the breath</p>
 
@@ -41,7 +41,8 @@
           <i class="fa-solid fa-rotate-right"></i>
         </button>
         <button id="" class="show">
-          <i class="fa-solid fa-gear"></i>
+          <a href="settings.html"><i class="fa-solid fa-gear"></i></a>
+          
         </button>
       </div>
 
