--- a/apps/meditation/settings.html
+++ b/apps/meditation/settings.html
@@ -11,11 +11,11 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
   </head>
-  <body>
+  <body class="light">
     <div class="container-settings">
         <p id="focus">Settings</p>
 
-        
+
 
         
 
