--- a/apps/meditation/index.html
+++ b/apps/meditation/index.html
@@ -11,7 +11,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
   </head>
-  <body class="light">
+  <body class="">
     <div class="container">
         <p id="focus">Focus on the breath</p>
 
