Light/Dark mode changes

--- a/apps/meditation/settings.html
+++ b/apps/meditation/settings.html
@@ -13,7 +13,7 @@
     /> 
     <link rel="stylesheet" href="settings.css" />
   </head>
-  <body class="">
+  <body >
     <div class="container-settings">
       <p id="focus">Settings</p>
 
@@ -25,21 +25,23 @@
               <input
                 type="radio"
                 class="radio"
-                id="automobiles"
+                id="dark"
                 name="category"
               />
-              <label for="automobiles">Dark</label>
+              <label for="dark">Dark</label>
             </div>
 
             <div class="option">
-              <input type="radio" class="radio" id="film" name="category" />
-              <label for="film">Light</label>
+              <input type="radio" class="radio" id="light" name="category" />
+              <label for="light">Light</label>
             </div>
           </div>
 
           <div class="selected">Dark</div>
         </div>
       </div>
+
+      <a href="index.html" id="back">close</a>
 
       <script src="settings.js"></script>
     </div>
