Theme selection fixed

--- a/apps/meditation/settings.html
+++ b/apps/meditation/settings.html
@@ -43,7 +43,7 @@
 
       <a href="index.html" id="back">close</a>
 
-      <script src="settings.js"></script>
+      <script src="themes.js"></script>
     </div>
 
     <audio src="assets/bells-1-72261.mp3" id="bell"></audio>
