--- a/apps/meditation/index.html
+++ b/apps/meditation/index.html
@@ -11,7 +11,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
   </head>
-  <body class="">
+  <body>
     <div class="container">
         <p id="focus">Focus on the breath</p>
 
@@ -52,9 +52,9 @@
     <audio loop src="assets/ambient-sounds/forest-with-small-river-birds-and-nature-field-recording-6735.mp3" 
     id="ambient-sound"></audio> 
     
-
-    
+    <script src="themes.js"></script>
+    <script src="script.js"></script>
   </body>
   
-  <script src="script.js"></script>
+  
 </html>
