--- a/apps/meditation/settings.html
+++ b/apps/meditation/settings.html
@@ -5,15 +5,14 @@
     <meta name="viewport" content="width=device-width" />
     <title>Meditation</title>
 
-   
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-    /> 
+    />
     <link rel="stylesheet" href="settings.css" />
   </head>
-  <body >
+  <body>
     <div class="container-settings">
       <p id="focus">Settings</p>
 
@@ -22,18 +21,23 @@
         <div class="select-box">
           <div class="options-container">
             <div class="option">
-              <input
-                type="radio"
-                class="radio"
-                id="dark"
-                name="category"
-              />
+              <input type="radio" class="radio" id="dark" name="category" />
               <label for="dark">Dark</label>
             </div>
 
             <div class="option">
               <input type="radio" class="radio" id="light" name="category" />
               <label for="light">Light</label>
+            </div>
+
+            <div class="option">
+              <input type="radio" class="radio" id="blue" name="category" />
+              <label for="blue">Blue</label>
+            </div>
+
+            <div class="option">
+              <input type="radio" class="radio" id="green" name="category" />
+              <label for="green">Green</label>
             </div>
           </div>
 
