Added buttons to select the time

--- a/apps/meditation/index.html
+++ b/apps/meditation/index.html
@@ -23,6 +23,15 @@
             value="10" min="1" max="99" onChange="rangeSlide(this.value)"
             onmousemove="rangeSlide(this.value)"></Input>
         </div>
+
+        <div class="time-btns">
+          <a id="one-minute">1</a>
+          <a id="five-minutes">5</a>
+          <a class="focus" id="ten-minutes">10</a>
+          <a id="thirty-minutes">30</a>
+          <a id="one-hour">1h</a>
+          <a ><i class="fa-solid fa-pencil"></i></a>
+        </div>
  
       <div class="btn">
         <button id="btn-sound-on" class="show">
