Added more audios

--- a/apps/meditation/settings.html
+++ b/apps/meditation/settings.html
@@ -44,6 +44,7 @@
           <div class="selected">Dark</div>
         </div>
       </div>
+      
 
       <a href="index.html" id="back">close</a>
 
@@ -56,6 +57,12 @@
       src="assets/ambient-sounds/forest-with-small-river-birds-and-nature-field-recording-6735.mp3"
       id="ambient-sound"
     ></audio>
+    <audio src="assets/ambient-sounds/birds-19624.mp3"></audio>
+    <audio src="assets/ambient-sounds/birds-singing-calm-river-nature-ambient-sound-127411.mp3"></audio>
+    <audio src="assets/ambient-sounds/light-rain-ambient-114354.mp3"></audio>
+    <audio src="assets/ambient-sounds/rain-in-forest-birds-nature-111405.mp3"></audio>
+    <audio src="assets/ambient-sounds/relaxing-mountains-rivers-streams-running-water-18178.mp3"></audio>
+    <audio src="assets/ambient-sounds/soft-rain-ambient-111154.mp3"></audio>
   </body>
 
   <script src="script.js"></script>
