--- a/apps/meditation/settings.html
+++ b/apps/meditation/settings.html
@@ -19,7 +19,7 @@
       <div id="theme-container">
         <p id="themes">Theme:</p>
         <div class="select-box">
-          <div class="options-container">
+          <div class="options-container-themes">
             <div class="option">
               <input type="radio" class="radio" id="dark" name="category" />
               <label for="dark">Dark</label>
@@ -41,14 +41,14 @@
             </div>
           </div>
 
-          <div class="selected">Dark</div>
+          <div class="selected-theme">Dark</div>
         </div>
       </div>
 
       <div id="style-container">
         <p id="themes">Style:</p>
         <div class="select-box">
-          <div class="options-container">
+          <div class="options-container-styles">
             <div class="option">
               <input type="radio" class="radio" id="slider" name="category" />
               <label for="slider">Slider</label>
@@ -60,14 +60,14 @@
             </div>
           </div>
 
-          <div class="selected">Slider</div>
+          <div class="selected-style">Slider</div>
         </div>
       </div>
 
       <div id="sound-container">
         <p id="themes">Sounds:</p>
         <div class="select-box">
-          <div class="options-container">
+          <div class="options-container-sounds">
             <div class="option">
               <input type="radio" class="radio" id="forest" name="category" />
               <label for="forest">Forest</label>
@@ -89,7 +89,7 @@
           </div>
         </div>
 
-          <div class="selected">Forest</div>
+          <div class="selected-sound">Forest</div>
         </div>
       </div>
       
