--- a/apps/meditation/settings.html
+++ b/apps/meditation/settings.html
@@ -45,16 +45,18 @@
         </div>
       </div>
 
+      
+
       <div id="style-container">
-        <p id="themes">Style:</p>
-        <div class="select-box">
+        <p id="styles">Style:</p>
+        <div class="select-box-styles">
           <div class="options-container-styles">
-            <div class="option">
+            <div class="style-option">
               <input type="radio" class="radio" id="slider" name="category" />
               <label for="slider">Slider</label>
             </div>
 
-            <div class="option">
+            <div class="style-option">
               <input type="radio" class="radio" id="buttons" name="category" />
               <label for="buttons">Buttons</label>
             </div>
@@ -97,6 +99,7 @@
       <a href="index.html" id="back">close</a>
 
       <script src="themes.js"></script>
+      <script src="styles.js"></script>
     </div>
 
     <audio src="assets/bells-1-72261.mp3" id="bell"></audio>
@@ -110,5 +113,5 @@
     <audio loop id="river-sound" src="assets/ambient-sounds/relaxing-mountains-rivers-streams-running-water-18178.mp3"></audio>
   </body>
 
-  <script src="script.js"></script>
+  
 </html>
