custom timer updated

--- a/apps/meditation/index.html
+++ b/apps/meditation/index.html
@@ -31,7 +31,8 @@
           <a class="focus" id="ten-minutes">10</a>
           <a id="thirty-minutes">30</a>
           <a id="one-hour">1h</a>
-          <a ><i class="fa-solid fa-pencil"></i></a>
+          <input type="number" id="custom-timer-input">
+          <a id="custom-timer"><i class="fa-solid fa-pencil"></i></a>
         </div>
  
       <div class="btn">
