--- a/apps/meditation/index.html
+++ b/apps/meditation/index.html
@@ -21,7 +21,7 @@
         <div id="sliderContainer">
         
             <Input class="range" id="minute" type="range"
-            value="10" min="1" max="99" onChange="rangeSlide(this.value)"
+            value="10" min="1" max="120" onChange="rangeSlide(this.value)"
             onmousemove="rangeSlide(this.value)"></Input>
         </div>
 
@@ -31,8 +31,13 @@
           <a class="focus" id="ten-minutes">10</a>
           <a id="thirty-minutes">30</a>
           <a id="one-hour">1h</a>
-          <input type="number" id="custom-timer-input">
+          <!-- <a><i class="fa-solid fa-angles-left"></i></a> -->
+          <a id="minus"><i class="fa-solid fa-angle-left"></i></a>
+          <input type="number" id="custom-timer-input" min="1" max="120" value="10">
+          <a id="plus"><i class="fa-solid fa-angle-right"></i></a>
+          <!-- <a><i class="fa-solid fa-angles-right"></i></a> -->
           <a id="custom-timer"><i class="fa-solid fa-pencil"></i></a>
+          <a id="confirm-timer"><i class="fa-solid fa-check"></i></a>
         </div>
  
       <div class="btn">
