--- a/apps/meditation/index.html
+++ b/apps/meditation/index.html
@@ -39,6 +39,14 @@
           <a id="custom-timer"><i class="fa-solid fa-pencil"></i></a>
           <a id="confirm-timer"><i class="fa-solid fa-check"></i></a>
         </div>
+
+        <div id="hide">
+          <!-- <a><i class="fa-solid fa-angles-left"></i></a> -->
+          <a id="minus"><i class="fa-solid fa-angle-left"></i></a>
+          <input type="number" id="custom-timer-input" min="1" max="120" value="10">
+          <a id="plus"><i class="fa-solid fa-angle-right"></i></a>
+          <!-- <a><i class="fa-solid fa-angles-right"></i></a> -->
+        </div>
  
       <div class="btn">
         <button id="btn-sound-on" class="show">
