--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE-edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Projeto</title>
+    <title>João</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -17,7 +17,7 @@
     <div id="container">
       <div id="profile">
         <img src="assets/avatar.png" alt="foto de perfil light mode" />
-        <p>João Gabriel</p>
+        <p>João Gabriel Pereira Alves</p>
       </div>
 
       <div id="switch" onclick="toggleMode()">
