adding new settings for style changes

--- a/apps/meditation/index.html
+++ b/apps/meditation/index.html
@@ -18,7 +18,7 @@
         <div id="timer" class="timer">10:00</div>
 
 
-        <div id="sliderContainer">
+        <div class="slider-container">
         
             <Input class="range" id="minute" type="range"
             value="10" min="1" max="120" onChange="rangeSlide(this.value)"
@@ -38,12 +38,12 @@
           <a id="confirm-timer"><i class="fa-solid fa-check"></i></a>
         </div>
 
-        <div id="hide">
-          <!-- <a><i class="fa-solid fa-angles-left"></i></a> -->
-          <a id="minus"><i class="fa-solid fa-angle-left"></i></a>
-          <input type="number" id="custom-timer-input" min="1" max="120" value="10">
-          <a id="plus"><i class="fa-solid fa-angle-right"></i></a>
-          <!-- <a><i class="fa-solid fa-angles-right"></i></a> -->
+        <div class="custom-btns">
+          <a><i class="fa-solid fa-angles-left"></i></a> 
+          <a><i class="fa-solid fa-angle-left"></i></a>
+          <input type="number" id="" min="1" max="120" value="10">
+          <a><i class="fa-solid fa-angle-right"></i></a>
+          <a><i class="fa-solid fa-angles-right"></i></a> 
         </div>
  
       <div class="btn">
