--- a/apps/meditation/settings.html
+++ b/apps/meditation/settings.html
@@ -47,6 +47,9 @@
 
       
       <!--
+
+        setting to choose what style the user wants
+
         <div id="style-container">
         <p id="styles">Style:</p>
         <div class="select-box-styles">
@@ -69,6 +72,8 @@
      -->
 
       <!--
+        
+        setting to chose what sound the user wants while meditating;
 
         <div id="sound-container">
         <p id="themes">Sounds:</p>
