--- a/apps/meditation/index.html
+++ b/apps/meditation/index.html
@@ -18,7 +18,7 @@
         <div id="timer" class="timer">10:00</div>
 
 
-        <div class="slider-container">
+        <div class="slider-container" id="hide">
         
             <Input class="range" id="minute" type="range"
             value="10" min="1" max="120" onChange="rangeSlide(this.value)"
@@ -38,7 +38,7 @@
           <a id="confirm-timer"><i class="fa-solid fa-check"></i></a>
         </div>
 
-        <div class="custom-btns">
+        <div class="custom-btns" id="hide">
           <a><i class="fa-solid fa-angles-left"></i></a> 
           <a><i class="fa-solid fa-angle-left"></i></a>
           <input type="number" id="" min="1" max="120" value="10">
