--- a/apps/palindrome/index.html
+++ b/apps/palindrome/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width">
-  <title>Document</title>
-</head>
-<body>
-  <input type="text" id="text-input"/>
-    <button id="check-btn">Check</button>
-    <div id="result">adad</div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <input type="text" id="text-input" />
+      <button id="check-btn">Check</button>
+      <div id="result">adad</div>
+    </div>
 
     <script src="palindrome.js"></script>
-</body>
+  </body>
 </html>
