--- a/apps/palindrome/index.html
+++ b/apps/palindrome/index.html
@@ -13,6 +13,6 @@
       <div id="result">adad</div>
     </div>
 
-    <script src="palindrome.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
